app.yml
apiVersion: v1
kind: Service
metadata:
  name: app-svc
  namespace: app
  labels:
    app: wordpress
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: wordpress
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app
  namespace: app
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
  replicas: 2
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - name: app
        image: $DOCKER_IMAGE_NAME:$BUILD_NUMBER
        ports:
        - containerPort: 80
          name: app-port
        volumeMounts:
        - name: app-storage
          mountPath: /var/www/html/wp-content/uploads/
      volumes:
      - name: app-storage
        persistentVolumeClaim:
          claimName: app-pvc
