db.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-app-svc
  namespace: app
  labels:
    app: db
spec:
  ports:
  - port: 3306
    targetPort: 3306
    protocol: TCP
  selector:
    app: db
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-app
  namespace: app
  labels:
    app: db
spec:
  selector:
    matchLabels:
      app: db
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - image: mysql:5.7
        name: db-app
        ports:
        - containerPort: 3306
          name: db-app-port
        volumeMounts:
        - name: db-app-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: db-app-storage
        persistentVolumeClaim:
          claimName: db-pvc
