devapp.yml
apiVersion: v1
kind: Service
metadata:
  name: devapp-svc
  namespace: devapp
  labels:
    app: devapp-wordpress
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: devapp-wordpress
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: devapp-deployment
  namespace: devapp
  labels:
    app: devapp-wordpress
spec:
  selector:
    matchLabels:
      app: devapp-wordpress
  replicas: 2
  template:
    metadata:
      labels:
        app: devapp-wordpress
    spec:
      containers:
      - name: devapp-wp
        image: $DOCKER_IMAGE_NAME:$BUILD_NUMBER
        ports:
        - containerPort: 80
          name: devapp-port
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "chown -R www-data:www-data /var/www/html"]
