prodapp.yml
apiVersion: v1
kind: Service
metadata:
  name: prodapp-svc
  namespace: prodapp
  labels:
    app: prodapp-wordpress
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: prodapp-wordpress
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: prodapp-deployment
  namespace: prodapp
  labels:
    app: prodapp-wordpress
spec:
  selector:
    matchLabels:
      app: prodapp-wordpress
  replicas: 2
  template:
    metadata:
      labels:
        app: prodapp-wordpress
    spec:
      containers:
      - name: prodapp-wp
        image: $DOCKER_IMAGE_NAME:$BUILD_NUMBER
        ports:
        - containerPort: 80
          name: prodapp-port
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "chown -R www-data:www-data /var/www/html"]
