prodapp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prodapp-ingress
  namespace: prodapp
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: prodapp.karimlabs.com
    http:
      paths:
      - backend:
          serviceName: prodapp-svc
          servicePort: 80
